test_scores/negative_dimers/features/Q13057.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q13057.pkl.xz